fixed horz scroll,added overflow for container

--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,4 +1,5 @@
 .container {
+  overflow-x: hidden;
   margin: 0 auto;
   box-sizing: border-box;
   max-width: 1260px;
